--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: pseudoplay
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -31,17 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  flutter_riverpod: ^3.0.3
-  google_fonts: ^6.3.2
-  provider: ^6.1.5+1
-  flutter_hooks: ^0.21.3+1
-  shared_preferences: ^2.5.3
-  collection: ^1.19.1
+  flutter_riverpod: ^2.4.0
+  google_fonts: ^6.2.1
+  flutter_hooks: ^0.20.5
+  shared_preferences: ^2.3.2
+  collection: ^1.18.0
   draggable_scrollbar: ^0.1.0
-  uuid: ^4.5.2
+  uuid: ^4.3.1
   go_router: ^17.0.0
 
 dev_dependencies:
@@ -60,13 +56,16 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/images/pseudoplay_logo.png
+    - assets/images/ghost.png
+
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
