--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   flutter_riverpod: ^2.4.0
   google_fonts: ^6.2.1
   flutter_hooks: ^0.20.5
   shared_preferences: ^2.3.2
+  intl: ^0.20.2
   collection: ^1.18.0
   draggable_scrollbar: ^0.1.0
   uuid: ^4.3.1
@@ -56,6 +59,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
